add endpoint login logs
